fix breadcrumb extra spaces

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -425,4 +425,6 @@ li a:hover {
   a {
     color: #337ab7;
   }
+  padding: 0px;
+  margin-bottom: 10px;
 }
